--- a/evictions-home-values.ipynb
+++ b/evictions-home-values.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
        "37736"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
        "36289"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -1644,7 +1644,7 @@
        "[50 rows x 29 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1665,56 +1665,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2210-11-06\n",
-      "2210-11-29\n",
-      "2210-11-28\n",
-      "2210-11-02\n",
-      "2210-07-28\n",
-      "2210-11-06\n",
-      "2210-11-13\n",
-      "2210-11-13\n",
-      "2210-11-30\n",
-      "2210-11-01\n",
-      "2210-11-01\n",
-      "2210-11-10\n",
-      "2210-11-02\n",
-      "2210-11-06\n",
-      "2210-11-06\n",
-      "2210-11-06\n",
-      "2210-11-08\n",
-      "2210-07-28\n",
-      "2210-11-13\n",
-      "2210-11-03\n",
-      "2210-11-03\n",
-      "2210-11-09\n",
-      "2210-11-13\n",
-      "2210-11-30\n",
-      "2210-11-29\n",
-      "2210-11-02\n",
-      "2210-11-06\n",
-      "2210-11-06\n",
-      "2210-11-09\n",
-      "2210-11-27\n",
-      "2210-11-30\n",
-      "2210-11-13\n",
-      "2210-11-29\n",
-      "2210-11-13\n",
-      "2210-11-13\n",
-      "2210-11-27\n",
-      "2210-11-16\n",
-      "2210-11-06\n",
-      "2210-11-27\n",
-      "2210-11-02\n",
-      "2210-11-20\n",
-      "2210-11-06\n",
-      "2210-11-24\n",
-      "2210-11-16\n",
-      "2210-11-09\n",
-      "2210-11-01\n",
-      "2210-11-27\n",
-      "2210-11-15\n",
-      "2210-11-01\n",
-      "2210-11-23\n"
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Feb2016 Feb2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Feb2016 Feb2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n",
+      "Jun2016 Jun2013\n"
      ]
     }
    ],
@@ -1729,8 +1729,10 @@
     "    lng = float(lng.replace(')',''))\n",
     "    newhoodname = nearest_neighborhood(lat, lng)\n",
     "    evictdate = row['File Date'].date()\n",
-    "    basisdate = evictdate + relativedelta(months=+2333)\n",
-    "    print(basisdate)"
+    "    startdate = evictdate + relativedelta(months=-36)\n",
+    "    evictdate_key = date.strftime(evictdate,\"%b%Y\")\n",
+    "    startdate_key = date.strftime(startdate, \"%b%Y\")\n",
+    "    print(evictdate_key + ' ' + startdate_key)"
    ]
   },
   {
@@ -3309,7 +3311,10 @@
     "    neighborhood = nearest_neighborhood(lat, lng)\n",
     "    name = neighborhood.name\n",
     "    meanvalue = neighborhood.meanvalue\n",
-    "#     return [name, meanvalue]\n",
+    "    evictdate = row['File Date'].date()\n",
+    "    startdate = evictdate + relativedelta(months=-36)\n",
+    "    evictdate_key = date.strftime(evictdate,\"%b%Y\")\n",
+    "    startdate_key = date.strftime(startdate, \"%b%Y\")\n",
     "    return pd.Series({'Eviction_id':row['Eviction ID'],'Zillow_Neighborhood':name, 'Z_Mean_Value':meanvalue}) \n",
     "    return name\n",
     "\n",
